test/parse/expr/bad-try-no-catch.txt
;;; TOOL: wat2wasm
;;; ARGS: --enable-exceptions
;;; ERROR: 1
(module
  (func try nop end)
  (func (try nop)))
(;; STDERR ;;;
out/test/parse/expr/bad-try-no-catch.txt:5:17: error: unexpected token end, expected catch.
  (func try nop end)
                ^^^
out/test/parse/expr/bad-try-no-catch.txt:6:17: error: unexpected token ), expected (.
  (func (try nop)))
                ^
;;; STDERR ;;)
